--- a/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
+++ b/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
@@ -1,44 +1,22 @@
 ---
 - name: Generate htpasswd file to authenticate later to the registry
   command: htpasswd -bBc /tmp/myregistry/auth/htpasswd {{user}} {{password}}
-  
+
 - name: generate auth data for pull-secret.json file
   shell: echo -n "{{user}}:{{password}}" | base64 -w0
-  register: output
-- name: "Creating a pull-secret.json file with content for all registries"
-  copy:
-   dest: "/tmp/pull-secret.json"
-   content: |
-    {
-      "auths": {
-        "myregistry:5000": {
-           "auth": '{{output.stdout}}',
-           "username": "{{user}}",
-           "password": "{{password}}"
-         },
-         "https://quay.io": {
-           "auth": '',
-           "email": ""
-         },
-         "https://registry.redhat.io": {
-           "auth": '',
-           "username": '',
-           "password": ''
-         },
-         "https://registry.connect.redhat.com": {
-          "auth": '=',
-          "username": '',
-          "password": ''
-         }
-       }
-    }
+  register: username_password_base64
   
 - name: "mkdir for root auth.json (based on an official solution https://access.redhat.com/solutions/5312991)"
   file:
     path: /run/containers/0
     state: directory
-  
-- name: Copying the new pull-secret.json file to /run/user/0/containers/auth.json file
+
+- name: Append dummy:dummy login for myregistry:5000 in /tmp/pull-secret.json
+  command: "jq '.auths += {\"myregistry:5000\": {\"auth\": \"{{username_password_base64.stdout}}\"}}' /tmp/pull-secret.json"
+  register: data
+
+- name: generate auth.json
   copy:
-    src: /tmp/pull-secret.json
     dest: /run/containers/0/auth.json
+    content: |
+      {{data.stdout}}
