--- a/Operator-Importing-for-Restricted-Networks/playbook.yaml
+++ b/Operator-Importing-for-Restricted-Networks/playbook.yaml
@@ -20,6 +20,6 @@
 
     - role: run-custom-index-container-and-mirror 
       vars:
-        required_operator: serverless
+        required_operator: mesh 
     
     - role: cleanup
