--- a/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
+++ b/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
@@ -19,4 +19,9 @@
   copy:
     dest: /run/containers/0/auth.json
     content: |
-      {{data.stdout}}
+      {{ data.stdout }}
+
+- name: Copy pull-secret.json
+  template:
+    src: pull-secret.json.j2
+    dest: /tmp/myregistry/data/registry/pull-secret.json
