--- a/Operator-Importing-for-Restricted-Networks/playbook.yaml
+++ b/Operator-Importing-for-Restricted-Networks/playbook.yaml
@@ -2,8 +2,8 @@
 - hosts: localhost
   vars:
     # In use in both: "run-custom-index-container-and-mirror" and "cleanup" roles
-    index_image: redhat-operator 
-    index_image_version: v4.6 
+    index_image: community-operator
+    index_image_version: v4.6
 
   roles:
 
@@ -20,6 +20,6 @@
 
     - role: run-custom-index-container-and-mirror 
       vars:
-        required_operator: mesh 
+        required_operator: argocd
     
     - role: cleanup
