--- a/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
+++ b/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
@@ -6,20 +6,19 @@
   shell: echo -n "{{user}}:{{password}}" | base64 -w0
   register: username_password_base64
   
+- name: append myregistry:5000 to pull-secret.json
+  shell: "cat <<< $(jq -c '.auths += {\"myregistry:5000\": {\"auth\":\"{{ username_password_base64.stdout }}\"}}' /tmp/pull-secret.json) > /tmp/pull-secret.json"
+
 - name: "mkdir for root auth.json (based on an official solution https://access.redhat.com/solutions/5312991)"
   file:
     path: /run/containers/0
     state: directory
 
-- name: Append dummy:dummy login for myregistry:5000 in /tmp/pull-secret.json
-  command: "jq '.auths += {\"myregistry:5000\": {\"auth\": \"{{username_password_base64.stdout}}\"}}' /tmp/pull-secret.json"
-  register: data
-
 - name: generate auth.json
   copy:
     dest: /run/containers/0/auth.json
-    content: |
-      {{ data.stdout }}
+    src: /tmp/pull-secret.json
+    remote_src: yes
 
 - name: Copy pull-secret.json
   template:
