--- a/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/run-registry.yaml
+++ b/Operator-Importing-for-Restricted-Networks/roles/deploy-local-registry/tasks/run-registry.yaml
@@ -100,10 +100,14 @@
         REGISTRY_HTTP_TLS_CERTIFICATE: /certs/myregistry_crt.crt
         REGISTRY_HTTP_TLS_KEY: /certs/myregistry_key.pem
 
-- name: Copy registryimage start command
+- name: Copy internal registry operatin scripts
   copy:
     src: registry
     dest: /tmp/myregistry/data/
+    mode: '0755'
+
+- name: Generate htpasswd file for start-repository.sh
+  command: htpasswd -bBc /tmp/myregistry/data/registry/htpasswd {{user}} {{password}}
 
 - name: Podman save the registry image to tar
   shell: "podman save > /tmp/myregistry/data/registry/registryimage.tar docker.io/library/registry:2"
