--- a/Provision_Local_Registry/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
+++ b/Provision_Local_Registry/roles/deploy-local-registry/tasks/generate-pull-secret.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Generate htpasswd file to authenticate later to the registry
-  command: htpasswd -bBc /tmp/myregistry/auth/htpasswd {{user}} {{password}}
+  command: htpasswd -bBc /home/mctux/myregistry/auth/htpasswd {{user}} {{password}}
 
 - name: generate auth data for pull-secret.json file
   shell: echo -n "{{user}}:{{password}}" | base64 -w0
@@ -11,8 +11,8 @@
     path: /run/containers/0
     state: directory
 
-- name: Append dummy:dummy login for myregistry:5000 in /tmp/pull-secret.json
-  command: "jq '.auths += {\"myregistry:5000\": {\"auth\": \"{{username_password_base64.stdout}}\"}}' /tmp/pull-secret.json"
+- name: Append dummy:dummy login for myregistry:5000 in /home/mctux/pull-secret.json
+  command: "jq '.auths += {\"myregistry:5000\": {\"auth\": \"{{username_password_base64.stdout}}\"}}' /home/mctux/pull-secret.json"
   register: data
 
 - name: generate auth.json
